# bokda

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  MANIFEXT.in  README.md  README2.md  bok-da 라이브러리 개인PC(로컬) 환경 사용 방법(내부망).md  bok-da 라이브러리 개인PC(로컬) 환경 사용 방법(내부망).txt  bok-da 라이브러리 개인PC(로컬) 환경 사용 방법(인터넷망).md  bok-da 라이브러리 개인PC(로컬) 환경 사용 방법(인터넷망).txt  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
docs/dev/: Dev Guide.md
docs/install/: bok-da 라이브러리 개인PC(로컬) 환경 사용 방법(내부망).md  bok-da 라이브러리 개인PC(로컬) 환경 사용 방법(인터넷망).md
docs/reference/: Container Class.md  HLW Covid.md  HLW FC.md  HLW.md  LBVAR Asymmetry.md  LBVAR Noninfo.md  Logistic Regression Frequentist.md  Probit Regression Bayes.md  Probit Regression Frequentist.md  README_kang.md  UCSV Univariate.md
examples/data/: DartAPI-codes.pkl  DartAPI-svc.pkl  DartAPI-vocab.json  DartAPI.pkl  DartAPI.xlsx  Data_BayesEcon.xlsx  Death.csv  Differed_Data.xlsx  Differed_Data_Selected.xlsx  ECOS-Tables.pkl  ECOS-Tables.xlsx  GDP 민간소비.xlsx  Housing.dta  IRF_Korea_Data.xlsx  Schooling.R  USData.xlsx  USData_covid.xlsx  abdata.dta  air2.dta  airacc.dta  bayes_test_data.xlsx  collinear.xlsx  cpi_1965.csv  crime4.dta  data_20241114.csv  dmtest.R  dmtest.xlsx  dwtest.csv  generated_1000x4.csv  hsng.dta  idle.dta  idle2.dta  klein.dta  lutkepohl2.dta  mroz.dta  nlswork.dta  pig.dta  python_data.xlsx  qsales.dta  rdinc.dta  (+29 more)
examples/notebooks/: 0-01 (파이썬 입문) Pandas.ipynb  0-02 (파이썬 입문) Numpy.ipynb  1-01 (데이터) 데이터 입출력.ipynb  1-02 (데이터) BIDAS api 호출을 통한 데이터 입수 및 전처리, 시각화.ipynb  1-03 (데이터) ECOS api 호출을 통한 데이터 입수 및 전처리.ipynb  1-04 (데이터) DART api 호출을 통한 데이터 입수 및 전처리.ipynb  1-05 (데이터) BIS dsr 데이터 전처리 및 시각화.ipynb  1-06 (데이터) 한국부동산원 지역별 주택매매가격지수 데이터 전처리 및 시각화.ipynb  1-07 (데이터) 국제투입산출표(WIOT) 분석.ipynb  1-08 (데이터) 빈티지 데이터셋 생성 예제.ipynb  10-01 (Workspace) 소개.ipynb  10-02 (Workpace) 회귀분석.ipynb  10-03 (Workspace) 예측력 평가.ipynb  2-01 (회귀분석, 선형모형) 최소자승법(LS)I.ipynb  2-02 (회귀분석, 선형모형) 견고한 추론(Robust Inferences with OLS).ipynb  2-03 (회귀분석, 선형모형) 최소자승법(LS)II 및 검정통계.ipynb  2-04 (회귀분석, 선형모형) 도구변수(IV)I.ipynb  2-05 (회귀분석, 선형모형) 도구변수(IV)II.ipynb  2-06 (회귀분석, 선형모형) Workpace를 활용한 선형모형분석.ipynb  2-07 (회귀분석, 검정통계) 이분산 검정(Heteroskedasticity).ipynb  2-08 (회귀분석, 검정통계) 자기상관 검정(Autocorrelation).ipynb  3-01 (패널분석, 선형모형) 패널데이터 도입.ipynb  3-02 (패널분석, 선형모형) 강외생성하 선형회귀(Linear Models under Strict Exogeneity).ipynb  3-03 (패널분석, 동적패널) 동적패널모형(Dynamic Panel Data Models).ipynb  4-01 (시계열분석, AR) AR모형.ipynb  4-02 (시계열분석, VAR) 최적시차 및 모형 추정.ipynb  4-03 (시계열분석, VAR) 충격반응함수분석.ipynb  4-04 (시계열분석, VAR) 분산분해 및 역사적분해.ipynb  4-05 (시계열분석, VAR) 일반화된 충격반응함수.ipynb  4-06 (시계열분석, VAR) 블록외생성제약.ipynb  4-07 (시계열분석, 상태공간모형) 은닉인자(UC)모형.ipynb  4-08 (시계열분석, 상태공간모형) 시변계수(TVP)모형.ipynb  4-09 (시계열분석, 상태공간모형) 동태적요인모형(DFM).ipynb  4-10 (시계열분석, 검정) 자기상관함수(ACF) 추정 및 백색잡음검정.ipynb  4-11 (시계열분석, 검정) 그레인저 인과관계 검정.ipynb  4-12 (시계열분석, 검정) 장기 분산 추정 및 단위근 검정.ipynb  4-13 (시계열분석, UCSV) Univariate UCSV 모형.ipynb  4-14 (시계열분석, UCSV) Multivariate UCSV 모형.ipynb  4-15 (시계열분석, LBVAR) Adaptive LBVAR 모형.ipynb  4-16 (시계열분석, LBVAR) Asymmetry LBVAR 모형.ipynb  (+31 more)
examples/projects/03nir_validation/: Eyestm.mat  Phim.mat  Rstar_FS.csv  Rstm.mat  Spec.mat  main.ipynb  rhom.mat  rstar_FS.json  rstar_HLW.json  rstar_HLW_Covid.json  rstar_HLW_FC.json  rstar_realcall.csv
examples/projects/03nir_validation/HLW_py/: HLW.ipynb  HLW_Covid.ipynb  HLW_Covid_output.ipynb  HLW_FC.ipynb  HLW_FC_output.ipynb  HLW_output.ipynb
examples/projects/03nir_validation/LM_R/: .Rhistory  LM_KOR_main.R  LM_main.R  LM_main_KOR.R  LM_main_KOR_v2.R  LM_main_KOR_v2_for_py.R  Rstar_LM.csv  nir_data_all.xlsx
examples/projects/03nir_validation/data/: Rstar_FS.csv  Rstar_HLW.csv  Rstar_HLW_Covid.csv  Rstar_HLW_Covid_smoothed.csv  Rstar_HLW_FC.csv  Rstar_HLW_FC_smoothed.csv  Rstar_HLW_old.csv  Rstar_HLW_smoothed.csv  Rstar_LM.csv
examples/projects/03nir_validation/input/: rstar_FS_2014-03-31.csv  rstar_FS_2014-06-30.csv  rstar_FS_2014-09-30.csv  rstar_FS_2014-12-31.csv  rstar_FS_2015-03-31.csv  rstar_FS_2015-06-30.csv  rstar_FS_2015-09-30.csv  rstar_FS_2015-12-31.csv  rstar_FS_2016-03-31.csv  rstar_FS_2016-06-30.csv  rstar_FS_2016-09-30.csv  rstar_FS_2016-12-31.csv  rstar_FS_2017-03-31.csv  rstar_FS_2017-06-30.csv  rstar_FS_2017-09-30.csv  rstar_FS_2017-12-31.csv  rstar_FS_2018-03-31.csv  rstar_FS_2018-06-30.csv  rstar_FS_2018-09-30.csv  rstar_FS_2018-12-31.csv  rstar_FS_2019-03-31.csv  rstar_FS_2019-06-30.csv  rstar_FS_2019-09-30.csv  rstar_FS_2019-12-31.csv  rstar_FS_2020-03-31.csv  rstar_FS_2020-06-30.csv  rstar_FS_2020-09-30.csv  rstar_FS_2020-12-31.csv  rstar_FS_2021-03-31.csv  rstar_FS_2021-06-30.csv  rstar_FS_2021-09-30.csv  rstar_FS_2021-12-31.csv  rstar_FS_2022-03-31.csv  rstar_FS_2022-06-30.csv  rstar_FS_2022-09-30.csv  rstar_FS_2022-12-31.csv  rstar_FS_2023-03-31.csv  rstar_FS_2023-06-30.csv  rstar_FS_2023-09-30.csv  rstar_FS_2023-12-31.csv  (+279 more)
manual/: LBVAR Adaptive.md  LBVAR Intro.md  LBVAR Symmetry.md  Logistic Regression Bayes.md  README.md  UCSV Multivariate.md  bok_patch_statsmodels.md
src/bok_da/: __init__.py  formula.py  scripts.py
src/bok_da/bayes/: __init__.py  utils.py
src/bok_da/bayes/linear_model/: __init__.py  bayes_lm.py
src/bok_da/bayes/logistic_model/: __init__.py  logistic_reg_bayes.py
src/bok_da/bayes/probit_model/: __init__.py  probit_reg_bayes.py
src/bok_da/cs/: __init__.py
src/bok_da/data/: dartapi.py  data_handling.py  ecosapi.py
src/bok_da/linear/: __init__.py
src/bok_da/panel/: __init__.py
src/bok_da/patch/: __init__.py  collinearity.py  extra_attrs.py  linearmodels.py  pyplot.py  sm_classes.py  sm_fast_lm.py  sm_methods.py  sm_prais.py  sm_stats_diagnostic.py  sm_summary.py  sm_tsa_stattools.py  statsmodels.py
src/bok_da/project/: __init__.py
src/bok_da/stata/: __init__.py  cstata.py
src/bok_da/ts/: __init__.py  container_class.py  ts_tools.py
src/bok_da/utils/: lib.py  ols.py  operator.py  pdf.py  plotfuns.py  read.py  rng.py  searchdf.py  tools.py  workspace.py
src/bok_da/valid/: __init__.py
src/bok_da/validation/: __init__.py
src/bok_da/viz/: __init__.py  hangul_settings.py  plotter.py
(+745 files in other folders)
