# pyproject.toml for bok-da

# =============================================
# 빌드 시스템 설정 (PEP 518)
# =============================================
[build-system]
# 빌드에 필요한 패키지 목록
requires = [
    "setuptools>=61",
    "wheel",
    "cython>=3.0.9", 
    "numpy>=1.26", # 기존 numpy>=2.1, 2.0
]
build-backend = "setuptools.build_meta"

# =============================================
# 프로젝트 메타데이터 (PEP 621)
# =============================================
[project]
name = "bok-da"                 
version = "0.3.1"               
authors = [
  {name = "Data Science Team, Bank of Korea"},
  {email = "di@bok.or.kr" },
]
maintainers = [
  { name="Changhoon Lee", email="changhoon@bok.or.kr"}
]
description = "BOK Python Library for Generalized Data Analysis"
readme = "README.md"
requires-python = ">=3.9"      # ★ 목표 환경 반영, >=3.11도 호환
license = { file="LICENSE.txt" } #"Apache-2.0"         # { file="LICENSE.txt" }    # LICENSE 파일이 루트에 있다고 가정
#license-files = ["LICENSE.txt"] 
keywords = ["bok", "data analysis", "econometrics", "time series", "Bayesian"]
classifiers = [                 
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    #"License :: OSI Approved :: Apache Software License", # 라이선스는 추후 확인
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Economics",
    "Topic :: Ecnomometrics",
    "Topic :: Time Series Analysis",
    "Topic :: Bayesian Inference", ## 추후 수정 필요
]

# =============================================
# 런타임 의존성 (Py3.9, Py3.12 기준)
# =============================================
dependencies = [
    # 파이썬 버전별 numpy, pandas 의존성 설정
    "numpy==1.26.4; python_version<'3.10'",        
    "numpy>=2.0.2,<2.1; python_version>='3.10'", # numpy>=2.1,<2.2, numpy>=1.26,<2.0.2
    "pandas==1.5.3; python_version<'3.10'",
    "pandas>=2.0; python_version>='3.10'",     # 기존 pandas>=2.0

    # 기타 라이브러리 의존성 설정
    "scipy>=1.13,<1.15",       # 2차 setup.py 기준, 기존 scipy>=1.14,<1.15
    "statsmodels>=0.14,<0.15",
    "matplotlib>=3.8.2,<3.9.4",
    "seaborn>=0.13.0",        
    "linearmodels==6.1",      # linearmodels>=6.0
    "dwtest==0.0.4",
    "openpyxl",               
    "tqdm",                   
    "threadpoolctl>=3.5,<3.6", # 2차 setup.py 기준
    #"wrapt>=1.14",
    #"mypy_extensions>=1.0",
    "requests>=2.28,<3.0",        # 2차 setup.py 기준
    "papermill>=2.4,<2.6.1",
    "ipywidgets>=7.7.1,<8.1.6",
    "scikit-learn>=1.5.0,<1.6.2",
    "s3fs>=2023.12.2,<2025.3.2",
    "jinja2>=3.1.0,<3.1.4",
]

# =============================================
# 선택적 의존성 (개발/테스트용)
# =============================================
[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
dev = [
    "bok-da[test]",
    "ruff",
    "build",
    "twine",
    "sphinx",
    "jupyterlab",
    "notebook",
    "ipykernel",
]

# =============================================
# 프로젝트 관련 URL (추후 수정 필요)
# =============================================
[project.urls]
Homepage = "https://bidas-gitlab.boknet.intra/digitaltech"
Repository = "https://bidas-gitlab.boknet.intra/digitaltech/bok_library.git"

# =============================================
# Setuptools 관련 추가 설정
# =============================================
[tool.setuptools]
zip-safe = false # C 확장 모듈 포함으로 인한 zip-safe=False 설정
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]       # 소스 코드는 'src' 디렉토리 아래에 위치
include = ["bok_da*"] # 'bok_da' 로 시작하는 모든 패키지 포함

## 패키지 내 예제코드, 데이터 파일 포함 ---
#[tool.setuptools.package-data]
#"bok_da" = [
#    "examples/notebooks/*.ipynb",
#    "examples/notebooks/*.pdf",
#    "examples/data/*,
#]

# 루트 examples 폴더를 site-packages/examples 로 설치
[tool.setuptools.data-files]
"examples/notebooks" = ["examples/notebooks/*"]
"examples/data"      = ["examples/data/*"]
"manual"             = ["manual/*"]

[project.entry-points."console_scripts"]
bokda-import-example_manual = "bok_da.scripts:import_example_manual"